remove display swing spaghetti code